# broadcastifycarch

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
code/: requirements.txt  setup.py
code/broadcastifycallarch/: __init__.py  broadcastifycallarch.py  config.ini
code/broadcastifycallarch/helpers/: __init__.py  bca_config.py  bca_logger.py
code/radioreference-archives/: __init__.py  radioreference_archives.py
docs/: getting_started.md
src/broadcastify_carch/: __init__.py
src/broadcastify_carch/helpers/: __init__.py
src/broadcastifycarch/: __init__.py  broadcastifycarch.py
src/broadcastifycarch/helpers/: __init__.py  bca_config.py
tests/: filetry.py  test_BCAConfig.py  test_BCALogger.py  test_BradcastifyCallArchives.py  test_BroadcastifyCallArchives.py  test_config.cfg
