[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "broadcastifycarch"
version = "0.1.0"
authors = [
  { name="Eric Baker", email="e-baker@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/e-baker/broadcastifycarch"
Issues = "https://github.com/e-baker/broadcastifycarch/issues"